Remove X check from title.

--- a/axa/index.html
+++ b/axa/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Allies <span class="x-symbol">X</span> Axis (A<span class="x-symbol">X</span>A) Alignment Chart — <span
-      class="x-symbol">X</span> (Twitter) Handles</title>
+  <title>Allies X Axis (AXA) Alignment Chart — X (Twitter) Handles</title>
   <style>
     :root {
       --bg: #0f172a;
