Redesign layout of home page to have a column layout for Projects and Posts.

--- a/axa/index.html
+++ b/axa/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 title: "AXA"
+date: 2024-11-28
+summary: "X social media character alignment grid."
+show_on_home: true
+type: "project"
 ---
 
 <div class="axa-wrapper">
