Add minor text changes including home page title.

--- a/axa/content.html
+++ b/axa/content.html
@@ -442,17 +442,16 @@
 
 <body>
   <header>
-    <h1>Allies <span class="x-symbol">X</span> Axis (A<span class="x-symbol">X</span>A) Alignment Chart — <span
-        class="x-symbol">X</span> (Twitter) Handles</h1>
+    <h1>Allies <span class="x-symbol">X</span> Axis (A<span class="x-symbol">X</span>A) Alignment Chart</h1>
   </header>
 
   <main>
 
     <div class="instruction">
       <ul>
-        <li>Click a cell and type: start with <code>@</code> for an <span class="x-symbol">X</span>/Twitter handle (avatar + link), or leave out <code>@</code> for plain text.</li>
+        <li>Click a cell and type: start with <code>@</code> for an <span class="x-symbol">X</span>/Twitter handle with avatar, or leave out <code>@</code> for plain text.</li>
         <li>Screen shot the chart and paste into your <span class="x-symbol">X</span> post.</li>
-        <li>Copy and paste the text at the bottom too.</li>
+        <li>Copy and paste the text at the bottom too to tag people and make AXA post searchable.</li>
         <li>Labels for columns and rows also editable if you want to make a custom alignment chart (or click
           the <b>FMK Labels</b> button above for a quick format change).</li>
         <li>Sometimes avatars won't load from <a href="https://unavatar.io/">unavatar.io</a> so a placeholder from <a
