--- a/axa/index.html
+++ b/axa/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "AXA"
 date: 2024-11-22
-summary: "X social media character alignment grid."
+summary: "Alignment grid."
 show_on_home: true
 type: "project"
 ---
