Remove background gradient from title.

--- a/axa/content.html
+++ b/axa/content.html
@@ -75,7 +75,7 @@
       grid-template-columns: 1fr auto;
       align-items: center;
       gap: .5rem;
-      background: linear-gradient(180deg, var(--header-grad-1), var(--header-grad-2));
+      /*background: linear-gradient(180deg, var(--header-grad-1), var(--header-grad-2));*/
     }
 
     h1 {
